refactor: 移除监控模块, 更新文档
